🦄 refactor(将mcp tool分开调用，在server.py调用),并增加了mcp prompt

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-BASE_URL=https://api.siliconflow.cn/v1
+# BASE_URL=https://api.siliconflow.cn/v1
+BASE_URL=http://192.168.0.147:8997/v1
 # MODEL=deepseek-ai/DeepSeek-V3
-MODEL=Qwen/Qwen2.5-72B-Instruct
+# MODEL=Qwen/Qwen2.5-72B-Instruct
+MODEL=Qwen3-30B-A3B
 API_KEY="sk-bxtnxvlmishkrpevtheztshobxqkhinqwozhbustlnocghgi"
 # OPENAI_API_KEY=
 # OPENAI_API_BASE=
