--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "httpx>=0.28.1",
     "mcp>=1.6.0",
     "openai>=1.76.0",
+    "psutil>=7.0.0",
     "python-dotenv>=1.1.0",
 ]
 
